force-app/main/default/objects/Client__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <displayFormat>CL-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Client Code</label>
    <type>AutoNumber</type>
</CustomField>