force-app/main/default/objects/Client__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Mention valid email address.</inlineHelpText>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>