force-app/main/default/objects/Client__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Mention your mobile number.</description>
    <inlineHelpText>The number should be in valid format.</inlineHelpText>
    <label>Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>