force-app/main/default/objects/Client__c/listViews/Activity.listView-meta.xml
<ListView>
    <fullName>Activity</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Activity</label>
</ListView>