force-app/main/default/objects/Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Code__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>